ui: show filterbar by default on search result delivers [#42412395]
Squashed commit of the following:

commit 3d2abd5410799e4b4877cf62f21e6ca49a2142d9
Author: Max F. Albrecht <1@178.is>
Date:   Mon Mar 10 09:50:49 2014 +0100

    test: test form submission by id

    part of [#42412395]

commit 03fdc1837699ae02647dd4336863c035c96607e1
Author: Max F. Albrecht <1@178.is>
Date:   Fri Mar 7 18:16:54 2014 +0100

    ui: rename #search_form => #filter_search_form

    related: [#42412395]

commit fe8e45c6e09ce567c1469d5a1c7c8a2446ab4829
Author: Max F. Albrecht <1@178.is>
Date:   Wed Mar 5 19:47:42 2014 +0100

    ui: show filterbar by default on search result

    fixes [#42412395]

commit 0983ad1e1ccc8dbbef91c286350c3fe13d871bf3
Author: Max F. Albrecht <1@178.is>
Date:   Wed Mar 5 19:45:35 2014 +0100

    ui: showing filterbar can be set by variable

    still also set by the URL parameter `filterpanel` like before— it is more important because visible by user, so URL param overrides var

    needed for [#42412395] (showing bar on search results), since the partials are used in several places

--- a/app/views/media_resources/list/_filter.html.haml
+++ b/app/views/media_resources/list/_filter.html.haml
@@ -1,7 +1,11 @@
-#ui-side-filter.filter-panel.ui-side-filter{:class => params[:filterpanel] ? "" : "hidden"}
+:ruby
+
+  show_filterbar = show_filterbar || params[:filterpanel]
+
+#ui-side-filter.filter-panel.ui-side-filter{:class => show_filterbar ? "" : "hidden"}
 
   #ui-side-filter-search.ui-side-filter-search.filter-search
-    %form#search_form
+    %form#filter_search_form
       %input.unstyled{:type => 'submit', :value => _("Limit by keyword")}
       %input#search_term.block.ui-filter-search-input{:type => "text", :value => params[:search], :name => 'search'}
       
