--- a/app/views/styleguide/8 Combos/_combos.html
+++ b/app/views/styleguide/8 Combos/_combos.html
@@ -9328,7 +9328,7 @@
 
           <div class="filter-panel ui-side-filter" id="ui-side-filter">
             <div class="ui-side-filter-search filter-search" id="ui-side-filter-search">
-              <form id="search_form">
+              <form id="filter_search_form">
                 <input class="unstyled" type="submit" value="Eingrenzen mit Suchwort">
                 <input class="block ui-filter-search-input" id="search_term" name="search" type="text">
               </form>
