--- a/app/views/styleguide/9 Upcoming Specification/_upcoming_spec.html
+++ b/app/views/styleguide/9 Upcoming Specification/_upcoming_spec.html
@@ -1573,7 +1573,7 @@
                   <div class="ui-container table auto">
                     <div class="filter-panel hidden ui-side-filter">
                       <div class="ui-side-filter-search filter-search">
-                        <form id="search_form">
+                        <form id="filter_search_form">
                           <input class="unstyled" type="submit" value="Eingrenzen mit Suchwort">
                           <input class="block ui-filter-search-input" name="search" type="text">
                         </form>
@@ -1691,7 +1691,7 @@
               </div>
             </div>
             <div class="ui-side-filter-search filter-search" id="ui-side-filter-search">
-              <form id="search_form">
+              <form id="filter_search_form">
                 <input class="block ui-filter-search-input" id="search_term" name="search" placeholder="Eingrenzen mit Suchwort" type="text">
               </form>
             </div>
@@ -1726,7 +1726,7 @@
               </div>
             </div>
             <div class="ui-side-filter-search filter-search" id="ui-side-filter-search">
-              <form id="search_form">
+              <form id="filter_search_form">
                 <input class="block ui-filter-search-input" id="search_term" name="search" placeholder="Eingrenzen mit Suchwort" type="text">
               </form>
             </div>
@@ -1761,7 +1761,7 @@
               </div>
             </div>
             <div class="ui-side-filter-search filter-search" id="ui-side-filter-search">
-              <form id="search_form">
+              <form id="filter_search_form">
                 <input class="block ui-filter-search-input" id="search_term" name="search" placeholder="Eingrenzen mit Suchwort" type="text">
               </form>
             </div>
@@ -1789,7 +1789,7 @@
               </a>
             </div>
             <div class="ui-side-filter-search filter-search" id="ui-side-filter-search">
-              <form id="search_form">
+              <form id="filter_search_form">
                 <input class="block ui-filter-search-input" id="search_term" name="search" placeholder="Eingrenzen mit Suchwort" type="text">
               </form>
             </div>
