Admin meta_terms feature
Squashed commit of the following:

commit b805776fccd123f46e8e0d94f0a0e3b8eabb07bb
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon Mar 17 11:14:44 2014 +0100

    handle Symbol as an argument

commit 11fd205f5bb3bd474fe2b332060fb879791d09df
Merge: 82dc649 42737f4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Mar 17 10:07:41 2014 +0100

    Merge branch 'ts_merging' of github.com:zhdk/madek into ts_merging

commit 82dc64990926ede9714baef6aba8ea54efc58c09
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Mar 17 10:07:10 2014 +0100

    modified:   db/structure.sql

commit 709227526e334cc6643bcc10257b883567e740a9
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Mar 17 10:06:09 2014 +0100

    Run migration on personas

commit 42737f49a4734357a7dd08d7e0eb9637f86f9975
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon Mar 17 10:00:11 2014 +0100

    remove problematic test

commit 876933a872b52c1c8731a4ac80bd6e67b2c56886
Author: Michael Podlecki <m.podlecki@op.pl>
Date:   Mon Mar 17 09:45:15 2014 +0100

    Merged meta-terms feature

    Conflicts:
    	app/controllers/app_admin/meta_terms_controller.rb
    	app/models/meta_term.rb
    	features/admin_meta_terms.feature

commit baf14bf86b0c8b0e9c71400bce6eb5bc851f7f5e
Author: Michael Podlecki <m.podlecki@op.pl>
Date:   Mon Mar 17 09:37:39 2014 +0100

    Finalized admin meta_terms

    improvments and test for sorting

--- a/app/views/app_admin/meta_terms/_meta_term.html.haml
+++ b/app/views/app_admin/meta_terms/_meta_term.html.haml
@@ -13,11 +13,11 @@
       Edit
     - unless meta_term.is_used?
       %br
-      = link_to app_admin_meta_term_path(meta_term), method: :delete, confirm: "Are you sure you want to delete this meta term?" do
+      = link_to app_admin_meta_term_path(meta_term, sort_by: @sort_by), method: :delete, confirm: "Are you sure you want to delete this meta term?" do
         %i.icon-trash
         Delete
     %br
-    = link_to form_transfer_resources_app_admin_meta_term_path(meta_term) do
+    = link_to form_transfer_resources_app_admin_meta_term_path(meta_term, sort_by: @sort_by) do
       %i.fa.fa-random
       Transfer
       %span= meta_term.used_times
