--- a/app/views/custom_urls/index.html.haml
+++ b/app/views/custom_urls/index.html.haml
@@ -25,7 +25,7 @@
               
                 %h2.title-l.ui-info-box-title Primäre Adresse
                 %p.ui-info-box-intro.prm
-                  Für jeden Inhalt gibt es immer <strong>genau eine</strong> primäre Adresse.
+                  Für jeden Inhalt gibt es immer genau eine primäre Adresse.
                   Diese ist in der Adressleiste des Browsers sichtbar wenn der Inhalt angezeigt wird. 
                   Neben der primären Adresse können weitere gesetzt werden, die auf die primäre Adresse weiterleiten.
 
@@ -34,7 +34,7 @@
                 
                 %h2.title-l.ui-info-box-title Kanonische Adresse (UUID)
                 %p.ui-info-box-intro.prm
-                  Jeder Inhalt hat eine (auf der zum Inhalt gehörende UUID basierende) automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben. 
+                  Jeder Inhalt hat eine automatisch erzeugte, kanonische Adresse bestehend aus Zahlen und Buchstaben, eine sog. UUID (Universally Unique Identifier). 
                   Diese Adresse kann nicht übertragen oder entfernt werden und ist deshalb immer an erster Stelle aufgelistet. 
 
         %hr.separator.light.mvl
