--- a/app/views/custom_urls/new.html.haml
+++ b/app/views/custom_urls/new.html.haml
@@ -17,7 +17,7 @@
             
               %h2.title-l.ui-info-box-title Anforderungen
               %p.ui-info-box-intro.prm
-                Eine Adresse darf nur <strong>genau einmal</strong> im System vorkommen. <br>
+                Eine Adresse darf nur genau einmal im System vorkommen. <br>
                 Sie beginnt immer mit einem Kleinbuchstaben, gefolgt von (mindestens einem) weiteren Zeichen 
                 aus Kleinbuchstaben, Nummern, Bindestrichen ("<code>-</code>") und Grundstrichen ("<code>_</code>") in beliebiger Reihenfolge.
 
