ui: metadata/copyright/edit: currently selected value is be pre-filled in form
delivers [#66856246]

Squashed commit of the following:

commit 0589e9ca8109ec1b22359ba041652a489415cbfe
Author: Max F. Albrecht <1@178.is>
Date:   Mon Mar 24 17:32:50 2014 +0100

    ui: metadata/copyright/edit: currently selected value is be pre-filled in form

commit 80521335e419a0b89cc91970f2a2bae753866abf
Author: Max F. Albrecht <1@178.is>
Date:   Mon Mar 24 17:32:35 2014 +0100

    test: metadata/copyright/edit: currently selected value should be pre-filled in form

--- a/app/views/media_resources/edit/fields/_meta_datum_copyright.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_copyright.html.haml
@@ -1,18 +1,19 @@
 :ruby
 
-  copyrights = Copyright.all 
   copyright_roots = Copyright.roots
-  value = (meta_datum.nil? ? nil : meta_datum.value) || Copyright.default
+  current = (meta_datum.nil? ? nil : meta_datum.value) || Copyright.default
 
-%input.value-target{:name => "resource[meta_data_attributes][#{@i}][value]", :type => "hidden", :value => meta_datum.nil? ? nil : meta_datum.value.id}
+%input.value-target{:name => "resource[meta_data_attributes][#{@i}][value]", :type => "hidden", :value => current}
 
 %select.block.copyright-roots{:id => "resource[meta_data_attributes][#{@i}][value]"}
   
+  / # parent copyright options
   - copyright_roots.each do |copyright|
-
+    
     = render partial: "media_resources/edit/fields/meta_datum_copyright/option", 
-             locals: {:copyright => copyright, :selected => value.root}
+             locals: {:copyright => copyright, :selected => current.root}
 
+/   # child copyright options
 - copyright_roots.each do |copyright|
 
   - unless copyright.leaf?
@@ -21,16 +22,16 @@
       
       - copyright.children.each do |child|
 
-        - if child.leaf?
+        - if child.leaf? # if it's just an option…
 
           = render :partial => "media_resources/edit/fields/meta_datum_copyright/option", 
-                   :locals => {:copyright => child}
+                   :locals => {:copyright => child, :selected => current}
 
-        - else
+        - else # if it's a "grouped" option…
 
           %optgroup{:label => child.label}
 
             - child.children.each do |leaf|
 
               = render :partial => "media_resources/edit/fields/meta_datum_copyright/option", 
-                       :locals => {:copyright => leaf}
+                       :locals => {:copyright => leaf, :selected => current}
