--- a/app/views/media_resources/edit/fields/meta_datum_copyright/_option.html.haml
+++ b/app/views/media_resources/edit/fields/meta_datum_copyright/_option.html.haml
@@ -1,7 +1,7 @@
 :ruby
 
   selected = if selected
-    (copyright.id == selected.id) ? :selected : nil
+    (copyright.id == selected.id) ? true : false
   else
     nil
   end
