--- a/app/views/app_admin/meta_terms/index.html.haml
+++ b/app/views/app_admin/meta_terms/index.html.haml
@@ -7,11 +7,11 @@
 
     .form-group
       = text_field :filter, :search_terms, class: "search-query form-control",
-          placeholder: "Search term", value: params.try(:[], :filter).try(:[], :search_terms)
+          placeholder: "Search term", value: @search_terms
 
     .form-group
       %label Filter by:
-      %select.form-control{name: :filter_by}
+      %select.form-control.filter-by{name: :filter_by}
         = options_for_select [["All", nil],
           ["Used", :used],
           ["Not used", :not_used],
@@ -37,6 +37,7 @@
       = button_tag type: 'submit', class: 'btn btn-sm' do
         %i.icon-filter
         Apply
+      = link_to "Reset", app_admin_meta_terms_path(reset: true)
 
 .row
   .col-md-12
