Admin interface: settings improvements
Squashed commit of the following:

commit 703127f7cee5a0a3a3a68df12b61d41e4143c896
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Thu Feb 13 15:06:51 2014 +0100

    Squashed commits:

    show settings page as index view

    add edit links on settings page

    settings are editable via their edit pages

    edit media set on its details view

    fix broken feature tests

--- a/app/views/app_admin/media_sets/show.html.haml
+++ b/app/views/app_admin/media_sets/show.html.haml
@@ -9,6 +9,10 @@
   %li
     =link_to manage_app_admin_media_set_individual_meta_contexts_path(media_set), class: "btn btn-warning" do
       Manage individual contexts
+  %li
+    = link_to edit_app_admin_media_set_path(media_set), class: "btn btn-warning" do
+      %i.fa.fa-pencil
+      Edit
 
 %p
   =link_to media_set do 
