--- a/app/views/app_admin/settings/edit.html.haml
+++ b/app/views/app_admin/settings/edit.html.haml
@@ -1,111 +1,19 @@
-%h1
-  %i.icon-cog
-  Edit Settings
+%h1 
+  Edit "#{@field.humanize}" Setting
 
-= form_tag app_admin_settings_path, method: "PUT", class: "form-horizontal settings", role: "form" do
+= form_for @settings, url: update_app_admin_settings_path, method: :put, html: {class: "form-horizontal", role: "form"} do |f|
 
-  %fieldset.well
-    %h3
-      %i.glyphicon.glyphicon-align-center
-      Header and footer
-
-    - [:title,:brand,:logo_url].each do |attr|
-      .form-group
-        %label.control-label.col-sm-2
-          = attr.to_s.capitalize.split("_").join(" ")
-        .col-sm-4
-          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
+  %fieldset 
 
     .form-group
-      %label.control-label.col-sm-2 Footer links
-      .col-sm-8
-        = text_area :app_settings_extra , :yaml_footer_links, value: @settings.footer_links.to_yaml, class: "form-control"
-
-
-  %fieldset.well
-
-    %h3 
-      %i.icon-vis-list
-      Welcome 
-
-    - [:welcome_title,:welcome_subtitle].each do |attr|
-      .form-group
-        %label.control-label.col-sm-2
-          = attr.to_s.capitalize.split("_").join(" ")
-        .col-sm-4
-          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
-
-
-  %fieldset.well
-
-    %h3 
-      %i.icon-privacy-open
-      Other / Urls
-
-    - [:support_url].each do |attr|
-      .form-group
-        %label.control-label.col-sm-2
-          = attr.to_s.capitalize.split("_").join(" ")
-        .col-sm-4
-          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
-
-
-  %fieldset.well
-
-    %h3 Displayed MetaContexts
-
-    %label 
-      %p
-        Configure the second and third MetaContext to be displayed, e.g. in a list view. 
-        The first displayed MetaContext is always set to 
-        %b core.
-      %p
-        Only 
-        %b existing 
-        MetaContext names can be submitted here!
-
+      %label.control-label.col-sm-2= @field.humanize
+      .col-sm-6
+        - if @field == "footer_links"
+          = text_area :app_settings_extra, :yaml_footer_links, value: @settings.footer_links.to_yaml, rows: 12, class: "form-control"
+        - else
+          = f.text_field @field, class: "form-control"
 
     .form-group
-      %label.control-label.col-sm-4 Name of the second displayed MetaContext 
-      .col-sm-4
-        = text_field :app_settings, :second_displayed_meta_context_name, value: @settings.second_displayed_meta_context_name, class: "form-control"
-
-    .form-group
-      %label.control-label.col-sm-4 Name of the third displayed MetaContext 
-      .col-sm-4
-        = text_field :app_settings, :third_displayed_meta_context_name, value: @settings.third_displayed_meta_context_name, class: "form-control"
-
-
-  %fieldset.well
-
-    %h3 
-      %i.glyphicon.glyphicon-folder-close
-      Sets 
-
-    - [:featured_set_id,:splashscreen_slideshow_set_id,:catalog_set_id].each do |attr|
-      .form-group
-        %label.control-label.col-sm-2
-          = attr.to_s.capitalize.split("_").join(" ")
-        .col-sm-4
-          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
-
-  %fieldset.well
-
-    %h3 
-      %i.glyphicon.glyphicon-download-alt
-      Dropbox
-
-    - [:dropbox_root_dir,:ftp_dropbox_server,:ftp_dropbox_user,:ftp_dropbox_password].each do |attr|
-      .form-group
-        %label.control-label.col-sm-2
-          = attr.to_s.capitalize.split("_").join(" ")
-        .col-sm-4
-          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
-
-
-  .form-group
-    .col-sm-1
-      =button_tag type: 'submit', class: 'btn btn-success'  do
-        Submit
-
-
+      .col-sm-offset-2.col-sm-4
+        = button_tag type: 'submit', class: "btn btn-success" do
+          Save
