--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -26,7 +26,7 @@
               %i.fa.fa-bar-chart-o
               Info + Statistics
           %li
-            =link_to edit_app_admin_settings_path do
+            =link_to app_admin_settings_path do
               %i.icon-cog
               Settings
           %li.dropdown
