--- a/app/assets/stylesheets/combos/_ui-rights-management.sass
+++ b/app/assets/stylesheets/combos/_ui-rights-management.sass
@@ -95,13 +95,15 @@
   .ui-rights-remove
     display: none
 
-// Limitations for groups
+// Limitations for public, groups and applications
 
 .ui-rights-management-groups,
+.ui-rights-management-apiapps,
 .ui-rights-management-public
   .ui-rights-check input[name='manage']
     display: none
 
+.ui-rights-management-apiapps,
 .ui-rights-management-public
   .ui-rights-check input[name='edit']
     display: none
