Minor fixes for the api
Remove links to not yet existing documentation

Fix wording

Fix content_stream

--- a/app/views/layouts/api_docs.html.haml
+++ b/app/views/layouts/api_docs.html.haml
@@ -32,8 +32,8 @@
                 %li= link_to "The Media Archive API", public_api_docs_path 
                 %li.divider
                 %li= link_to "Authentication", authentication_public_api_docs_path 
-                %li= link_to "Authorization", authorization_public_api_docs_path 
-                %li= link_to "Forwarding Authentication and Authorization", forwarding_auth_public_api_docs_path 
+                -# %li= link_to "Authorization", authorization_public_api_docs_path 
+                -# %li= link_to "Forwarding Authentication and Authorization", forwarding_auth_public_api_docs_path 
                 %li= link_to "Resources (in general)", resources_public_api_docs_path 
                 %li= link_to "Query parameters", query_parameters_public_api_docs_path 
 
@@ -69,9 +69,9 @@
       .alert.alert-warning
 
         :markdown 
-          The *"new" Madek API* is currently in development and as such in [pre-ALPHA](http://en.wikipedia.org/wiki/Software_release_life_cycle#Pre-alpha) status! 
+          The *"new" Madek API* is currently in development and as such in _beta_ status! 
 
-          Many features are yet missing and incompatible changes are to be expected!
+          Features are yet missing and incompatible changes can not be ruled out.
 
 
 
