ui: admin: enhancements for API::Applications
delivers [#68176992]

Squashed commit of the following:

commit 187d1561583dabb860906ece5728d44f1ba31698
Author: Max F. Albrecht <1@178.is>
Date:   Tue Mar 25 19:03:52 2014 +0100

    js: admin: apps: refactor autocompletion

commit d763aa59abcade6aabc504812cfe28a47aaf860b
Author: Max F. Albrecht <1@178.is>
Date:   Tue Mar 25 15:19:13 2014 +0100

    ui: admin: users: make autocomplete_search case insensitive

commit 7b1ed53b324bfb687e833d637d4b00bb812dbd9a
Author: Max F. Albrecht <1@178.is>
Date:   Tue Mar 25 14:35:15 2014 +0100

    ui: admin: apps: add icons

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -76,6 +76,7 @@
             %ul.dropdown-menu
               %li
                 = link_to app_admin_applications_path do
+                  %i.fa.fa-flask
                   Applications (API)
                 = link_to app_admin_groups_path do
                   %i.icon-privacy-group
