ui: /my: list contexts similar to /explore, but only user's context (if any)
Squashed commit of the following:

commit f576421525ba3ccafbc6711cc282d614f4b3e065
Author: Max F. Albrecht <1@178.is>
Date:   Fri Apr 11 16:12:13 2014 +0200

    ui: /my: make /my/context more consistent (and translated)

    part of [#44584457]

commit dc9f8beb0de8d4ab7a4bff52e82052a5137572e3
Author: Max F. Albrecht <1@178.is>
Date:   Tue Apr 8 12:26:33 2014 +0200

    ui: /my: duplicate everything related to meta_contexts from /explore

    part of [#44584457]

--- a/app/views/application/sidebar/_my_archive.html.haml
+++ b/app/views/application/sidebar/_my_archive.html.haml
@@ -45,3 +45,9 @@
           %li.ui-side-navigation-item{:class => my_groups_page? ? "active" : ""}
             %a.strong{:href => my_groups_path} 
               = _("My workgroups")
+          %li.separator.mini
+
+        - unless @user_contexts_count.zero?
+          %li.ui-side-navigation-item{:class => my_contexts_page? ? "active" : ""}
+            %a.strong{:href => my_contexts_path} 
+              = _("My contexts")
