--- a/app/views/app_admin/meta_keys/_form.html.haml
+++ b/app/views/app_admin/meta_keys/_form.html.haml
@@ -1,15 +1,100 @@
 = form_for [:app_admin, @meta_key], html: {class: "form-horizontal", role: "form"} do |f|
 
+  = hidden_field_tag :meta_terms_positions
+
   .form-group
     %label.control-label.col-sm-2 Label
     .col-sm-4
-      = f.text_field :id, class: 'form-control'
+      = f.text_field :id, class: 'form-control', disabled: f.object.persisted?
+
+  - unless @meta_key.persisted?
+    .form-group
+      %label.control-label.col-sm-2 Meta datum object type
+      .col-sm-4
+        = f.select :meta_datum_object_type, MetaKey.object_types, {include_blank: false}, {class: "form-control"}
+
+  - if @meta_key.meta_datum_object_type == 'MetaDatumMetaTerms'
+    .form-group
+      %label.control-label.col-sm-2 Terms
+      .col-sm-6
+        = link_to "#", class: "btn btn-primary", id: "alphabetical-order" do
+          %i.fa.fa-sort-alpha-asc
+          Apply Alphabetical Order
+        %table.table.table-hover#sortable
+          = f.fields_for :meta_terms do |ff|
+            %tr{id: "#{ff.object.id}", data: { de_ch: ff.object.de_ch }}
+              %td
+                - if ff.object.new_record?
+                  %h2 Add Meta Term
+                - else
+                  = label_tag :id, "ID"
+                  = text_field_tag :id, ff.object.id, disabled: true
+                %br
+                - LANGUAGES.each do |language|
+                  = ff.label language, language.upcase
+                  = ff.text_field language
+                  %br
+                - if f.object.used_term_ids.include?(ff.object.id)
+                  Used, merge to:
+                  = text_field_tag "reassign_term_id[#{ff.object.id}]", nil, size: 31
+                  %br
+                - if ff.object.persisted? && 
+                  = ff.check_box :_destroy
+                  = ff.label :_destroy, 'Delete'
+
+    .form-group
+      .col-sm-offset-2.col-sm-4
+        .checkbox
+          %label
+            = f.check_box :is_extensible_list
+            Extensible list?
 
   .form-group
-    %label.control-label.col-sm-2 Meta datum object type
-    .col-sm-4
-      = f.select :meta_datum_object_type, MetaKey.object_types, {include_blank: false}, {class: "form-control"}
-
-  .form-group
-    .col-sm-offset-1.col-sm-4
+    .col-sm-offset-2.col-sm-4
       = button_tag "Submit", type: 'submit', class: "btn btn-success"
+      - if @meta_key.persisted?
+        = link_to "Cancel", edit_app_admin_meta_key_path(@meta_key), class: "btn btn-danger"
+
+:javascript
+  $(document).ready(function(){
+    function getPositions() {
+      var positions = [];
+      $('#sortable tr').each(function() {
+        if(this.id) {
+          positions.push(this.id);
+        }
+      });
+      $('#meta_terms_positions').val( positions.join(',') );
+    }
+
+    $("#sortable").sortable({
+      axis: 'y',
+      items: 'tr',
+      cursor: 'move',
+      placeholder: 'placeholder',
+      forcePlaceholderSize: true,
+      stop: function(event, ui) {
+        getPositions();
+      }
+    });
+    $("#sortable").disableSelection();
+
+    $('#alphabetical-order').on('click', function(e) {
+      e.preventDefault();
+
+      function compare(a, b) {
+        var aValue = $(a).data('de-ch').toLowerCase();
+        var bValue = $(b).data('de-ch').toLowerCase();
+        if(aValue < bValue) {
+          return -1;
+        }
+        if(aValue > bValue) {
+          return 1;
+        }
+        return 0;
+      }
+
+      $('#sortable tr[data-de-ch]').detach().sort(compare).prependTo('#sortable tbody');
+      getPositions();
+    });
+  });
