--- a/app/views/app_admin/meta_keys/_meta_key.html.haml
+++ b/app/views/app_admin/meta_keys/_meta_key.html.haml
@@ -1,3 +1,12 @@
 %tr
   %td= meta_key.label
   %td= meta_key.meta_datum_object_type
+  %td
+    - if meta_key.meta_datum_object_type == 'MetaDatumMetaTerms'
+      %ul
+        - meta_key.meta_terms.each do |meta_term|
+          %li= meta_term
+  %td.no-wrap
+    = link_to edit_app_admin_meta_key_path(meta_key), class: "btn btn-warning btn-xs" do
+      %i.icon-pen
+      Edit
