ui: my/explore: remove contexts from /explore, just call them 'contexts' in /my
delivers [#44584457]

--- a/app/views/my/contexts.html.haml
+++ b/app/views/my/contexts.html.haml
@@ -8,7 +8,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl
-            = _("My contexts")
+            = _("Contexts")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
