--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -81,7 +81,7 @@
           - unless @user_contexts_count.zero?
             = render :partial => "meta_contexts/wrapper",
                      :locals => {:meta_contexts => @user_contexts,
-                                 :title => _("My contexts"),
+                                 :title => _("Contexts"),
                                  :link => my_contexts_path,
                                  :id => "my_contexts_block"}
 
