--- a/app/views/application/sidebar/_explore.html.haml
+++ b/app/views/application/sidebar/_explore.html.haml
@@ -3,7 +3,9 @@
     %ul.ui-side-navigation
 
       = render :partial => "application/sidebar/explore/catalog_set" if @catalog_set
-
+      %li.separator.mini
+      
       = render :partial => "application/sidebar/explore/featured_set" if @featured_set
-
+      %li.separator.mini
+      
       = render :partial => "application/sidebar/explore/keywords" if @any_top_keywords
