ui: permissions: visualise the overridden 'public' rights also for apps

--- a/app/assets/stylesheets/combos/_ui-rights-management.sass
+++ b/app/assets/stylesheets/combos/_ui-rights-management.sass
@@ -125,8 +125,9 @@
 .ui-rights-management.public-view
   &.unmanageable .ui-rights-check.view label
     opacity: 0.5
+  .ui-rights-management-users,
   .ui-rights-management-groups,
-  .ui-rights-management-users
+  .ui-rights-management-apiapps
     .ui-rights-check.view
       .ui-right-overwritten-by-public
         display: inline-block
@@ -140,8 +141,9 @@
 .ui-rights-management.public-download
   &.unmanageable .ui-rights-check.download label
     opacity: 0.5
+  .ui-rights-management-users,
   .ui-rights-management-groups,
-  .ui-rights-management-users
+  .ui-rights-management-apiapps
     .ui-rights-check.download
       .ui-right-overwritten-by-public
         display: inline-block
