--- a/app/views/media_resources/edit/fields/_meta_datum_keywords.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_keywords.html.haml
@@ -6,7 +6,8 @@
       - meta_datum.value.each do |value|
 
         %li.multi-select-tag
-          %input{:name => "resource[meta_data_attributes][#{@i}][value][]", :type => "hidden", :value => value.meta_term_id}
+          -#  TODO oh oh check this
+          %input{:name => "resource[meta_data_attributes][#{@i}][value][]", :type => "hidden", :value => value.keyword_term_id}
           = value
           %a.multi-select-tag-remove
             .icon-remove.icon-close.small
